tests/func/grammar/test_grammar_no_terminal_associavitity.err
4:20: syntax error: unexpected tokens NotComment(};), }
    3 |     terminals
    4 |     A: 'a' {15, left};
      |                     ^^^ expected: :